Update CUDA, SciMLBase cnd StatsBase ompats

--- a/Project.toml
+++ b/Project.toml
@@ -52,7 +52,7 @@ ArgParse = "1"
 ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7"
-CUDA = "4"
+CUDA = "4, 5"
 ClimaComms = "0.5"
 ClimaCore = "0.10"
 ClimaTimeSteppers = "0.7"
@@ -75,9 +75,9 @@ OrdinaryDiffEq = "5, 6"
 Pkg = "1.8"
 RRTMGP = "0.9"
 RootSolvers = "0.2, 0.3, 0.4"
-SciMLBase = "1"
+SciMLBase = "1, 2"
 StaticArrays = "1"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 SurfaceFluxes = "0.7"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.11"
