--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -90,7 +90,7 @@ PrettyTables = "1, 2"
 ProfileCanvas = "0.1"
 ProgressLogging = "0.1"
 QuadGK = "2"
-SciMLBase = "1"
+SciMLBase = "1, 2"
 SnoopCompileCore = "2"
 TOML = "1"
 URIs = "1"
