--- a/Project.toml
+++ b/Project.toml
@@ -62,7 +62,7 @@ Dierckx = "0.5"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
-FastGaussQuadrature = "0.4, 0.5"
+FastGaussQuadrature = "0.4, 0.5, 1"
 ImageFiltering = "0.7"
 Insolation = "0.6"
 Interpolations = "0.14"
