Add DiffEqBase compat entry

--- a/Project.toml
+++ b/Project.toml
@@ -61,6 +61,7 @@ ClimaTimeSteppers = "0.7"
 CloudMicrophysics = "0.14"
 Colors = "0.12"
 Dierckx = "0.5"
+DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
