--- a/config/model_configs/diagnostic_edmfx_trmm_stretched_box.yml
+++ b/config/model_configs/diagnostic_edmfx_trmm_stretched_box.yml
@@ -30,4 +30,4 @@ dt: 10secs
 t_end: 6hours
 dt_save_to_disk: 10mins
 FLOAT_TYPE: "Float64"
-toml: [toml/diagnostic_edmfx_trmm_box.toml]
+toml: toml/diagnostic_edmfx_trmm_box.toml
