--- a/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.yml
+++ b/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.yml
@@ -15,4 +15,4 @@ precip_model: "0M"
 regression_test: true
 job_id: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res"
 moist: "equil"
-toml: [toml/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.toml]
+toml: toml/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.toml
