--- a/config/gpu_configs/central_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.yml
+++ b/config/gpu_configs/central_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.yml
@@ -13,4 +13,4 @@ precip_model: "0M"
 rayleigh_sponge: true
 forcing: "held_suarez"
 job_id: "central_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km"
-toml: [toml/longrun_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.toml]
+toml: toml/longrun_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.toml
