--- a/config/model_configs/edmfx_adv_test_box.yml
+++ b/config/model_configs/edmfx_adv_test_box.yml
@@ -20,4 +20,4 @@ dt: "10secs"
 t_end: "3600secs"
 dt_save_to_disk: "100secs"
 FLOAT_TYPE: "Float64"
-toml: [toml/edmfx_box_advection.toml]
+toml: toml/edmfx_box_advection.toml
