--- a/config/model_configs/plane_agnesi_mountain_test_stretched.yml
+++ b/config/model_configs/plane_agnesi_mountain_test_stretched.yml
@@ -14,4 +14,4 @@ kappa_4: 1.0e6
 z_max: 25000.0
 topography: "Agnesi"
 job_id: "plane_agnesi_mountain_test_stretched"
-toml: [toml/plane_agnesi_mountain_test_stretched.toml]
+toml: toml/plane_agnesi_mountain_test_stretched.toml
