--- a/config/model_configs/plane_agnesi_mountain_test_uniform.yml
+++ b/config/model_configs/plane_agnesi_mountain_test_uniform.yml
@@ -13,4 +13,4 @@ kappa_4: 1.0e6
 z_max: 25000.0
 topography: "Agnesi"
 job_id: "plane_agnesi_mountain_test_uniform"
-toml: [toml/plane_agnesi_mountain_test_uniform.toml]
+toml: toml/plane_agnesi_mountain_test_uniform.toml
