--- a/config/model_configs/plane_schar_mountain_test_stretched.yml
+++ b/config/model_configs/plane_schar_mountain_test_stretched.yml
@@ -15,4 +15,4 @@ kappa_4: 5.0e7
 z_max: 25000.0
 topography: "Schar"
 job_id: "plane_schar_mountain_test_stretched"
-toml: [toml/plane_schar_mountain_test_stretched.toml]
+toml: toml/plane_schar_mountain_test_stretched.toml
