--- a/config/model_configs/plane_schar_mountain_test_uniform.yml
+++ b/config/model_configs/plane_schar_mountain_test_uniform.yml
@@ -14,4 +14,4 @@ kappa_4: 5.0e7
 z_max: 25000.0
 topography: "Schar"
 job_id: "plane_schar_mountain_test_uniform"
-toml: [toml/plane_schar_mountain_test_uniform.toml]
+toml: toml/plane_schar_mountain_test_uniform.toml
