--- a/config/model_configs/sphere_held_suarez_rhoe_equilmoist_hightop_sponge.yml
+++ b/config/model_configs/sphere_held_suarez_rhoe_equilmoist_hightop_sponge.yml
@@ -12,5 +12,5 @@ regression_test: true
 viscous_sponge: true
 job_id: "sphere_held_suarez_rhoe_equilmoist_hightop_sponge"
 moist: "equil"
-toml: [toml/sphere_held_suarez_rhoe_equilmoist_hightop_sponge.toml]
+toml: toml/sphere_held_suarez_rhoe_equilmoist_hightop_sponge.toml
 output_default_diagnostics: true
