--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -569,7 +569,7 @@ steps:
       - label: ":computer: checkbounds"
         command: >
           julia --color=yes --check-bounds=yes --project=perf perf/benchmark.jl
-          checkbounds
+          $PERF_CONFIG_PATH/checkbounds.yml
         artifact_paths: "checkbounds/*"
         agents:
           slurm_mem: 20GB
@@ -970,14 +970,14 @@ steps:
       - label: ":computer: Benchmark: perf target (default)"
         command: >
           julia --color=yes --project=perf perf/benchmark.jl
-          bm_perf_target
+          $PERF_CONFIG_PATH/bm_perf_target.yml
         agents:
           slurm_mem: 20GB
 
       - label: ":computer: Benchmark: perf target (Threaded)"
         command: >
           julia --color=yes --threads 8 --project=perf perf/benchmark.jl
-          bm_perf_target_threaded
+          $PERF_CONFIG_PATH/bm_perf_target_threaded.yml
         agents:
           slurm_mem: 20GB
           slurm_cpus_per_task: 8
@@ -986,7 +986,7 @@ steps:
       - label: ":fire: Flame graph: perf target (default)"
         command: >
           julia --color=yes --project=perf perf/flame.jl
-          default flame_perf_target
+          $PERF_CONFIG_PATH/flame_perf_target.yml
         artifact_paths: "flame_perf_target/*"
         agents:
           slurm_mem: 20GB
@@ -994,7 +994,7 @@ steps:
       - label: ":fire: Flame graph: perf target (with tracers)"
         command: >
           julia --color=yes --project=perf perf/flame.jl
-          flame_perf_target_tracers
+          $PERF_CONFIG_PATH/flame_perf_target_tracers.yml
         artifact_paths: "flame_perf_target_tracers/*"
         agents:
           slurm_mem: 20GB
@@ -1002,7 +1002,7 @@ steps:
       - label: ":fire: Flame graph: perf target (edmfx)"
         command: >
           julia --color=yes --project=perf perf/flame.jl
-          sphere_baroclinic_wave_rhoe_equilmoist_edmfx flame_perf_target_edmfx
+          $PERF_CONFIG_PATH/flame_perf_target_edmfx.yml
         artifact_paths: "flame_perf_target_edmfx/*"
         agents:
           slurm_mem: 20GB
@@ -1010,7 +1010,7 @@ steps:
       - label: ":fire: Flame graph: perf target (diagnostic edmfx)"
         command: >
           julia --color=yes --project=perf perf/flame.jl
-          diagnostic_edmfx_aquaplanet_tke flame_perf_target_diagnostic_edmfx
+          $PERF_CONFIG_PATH/flame_perf_target_diagnostic_edmfx.yml
         artifact_paths: "flame_perf_target_diagnostic_edmfx/*"
         agents:
           slurm_mem: 20GB
@@ -1018,7 +1018,7 @@ steps:
       - label: ":fire: Flame graph: perf target (edmf)"
         command: >
           julia --color=yes --project=perf perf/flame.jl
-          sphere_baroclinic_wave_rhoe_equilmoist_edmf flame_perf_target_edmf
+          $PERF_CONFIG_PATH/flame_perf_target_edmf.yml
         artifact_paths: "flame_perf_target_edmf/*"
         agents:
           slurm_mem: 20GB
@@ -1026,7 +1026,7 @@ steps:
       - label: ":fire: Flame graph: perf target (Threaded)"
         command: >
           julia --threads 8 --color=yes --project=perf perf/flame.jl
-          default flame_perf_target_threaded
+          $PERF_CONFIG_PATH/flame_perf_target_threaded.yml
         artifact_paths: "flame_perf_target_threaded/*"
         agents:
           slurm_cpus_per_task: 8
@@ -1035,7 +1035,7 @@ steps:
       - label: ":fire: Flame graph: perf target (Callbacks)"
         command: >
           julia --color=yes --project=perf perf/flame.jl
-          flame_perf_target_callbacks
+          $PERF_CONFIG_PATH/flame_perf_target_callbacks.yml
         artifact_paths: "flame_perf_target_callbacks/*"
         agents:
           slurm_mem: 20GB
@@ -1043,7 +1043,7 @@ steps:
       - label: ":fire: Flame graph: gravity wave"
         command: >
           julia --color=yes --project=perf perf/flame.jl
-          flame_perf_gw
+          $PERF_CONFIG_PATH/flame_perf_gw.yml
         artifact_paths: "flame_perf_gw/*"
         agents:
           slurm_mem: 20GB
@@ -1051,7 +1051,7 @@ steps:
       - label: ":fire: Flame graph: perf target (diagnostics)"
         command: >
           julia --color=yes --project=perf perf/flame.jl
-          flame_perf_diagnostics
+          $PERF_CONFIG_PATH/flame_perf_diagnostics.yml
         artifact_paths: "flame_perf_diagnostics/*"
         agents:
           slurm_mem: 20GB
@@ -1060,7 +1060,7 @@ steps:
       - label: ":rocket: JET n-failures (inference)"
         command: >
           julia --color=yes --project=perf perf/jet_test_nfailures.jl
-          jet_n_failures
+          $PERF_CONFIG_PATH/jet_n_failures.yml
         agents:
           slurm_mem: 20GB
 
