Fix CUDA compat

--- a/Project.toml
+++ b/Project.toml
@@ -54,7 +54,7 @@ ArgParse = "1"
 ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7"
-CUDA = "4, 5"
+CUDA = "4"
 ClimaComms = "0.5"
 ClimaCore = "0.10"
 ClimaTimeSteppers = "0.7"
