--- a/test/parameter_tests.toml
+++ b/test/parameter_tests.toml
@@ -8,22 +8,7 @@ value = 0
 type = "float"
 alias = "same_alias"
 
-[y_elem]
-value = 0
+[C_E]
+alias = "C_E"
+value = 99
 type = "float"
-alias = "y_elem"
-
-[dt_save_to_disk]
-value = "5mins"
-type = "string"
-alias = "dt_save_to_disk"
-
-[dt]
-value = "10secs"
-type = "string"
-alias = "dt"
-
-[z_elem]
-value = 60
-type = "integer"
-alias = "z_elem"
