--- a/config/model_configs/advective_edmfx_gabls_box.yml
+++ b/config/model_configs/advective_edmfx_gabls_box.yml
@@ -1,10 +1,9 @@
-job_id: "edmfx_rico_box"
-initial_condition: "Rico"
-subsidence: "Rico"
-ls_adv: "Rico"
-surface_setup: "Rico"
-turbconv: "edmfx"
-edmfx_upwinding: first_order
+job_id: "advective_edmfx_gabls_box"
+initial_condition: GABLS
+edmf_coriolis: GABLS
+surface_setup: GABLS
+turbconv: "advective_edmfx"
+edmfx_upwinding: "first_order"
 edmfx_entr_model: "ConstantCoefficient"
 edmfx_detr_model: "BOverW"
 edmfx_sgs_mass_flux: true
@@ -12,19 +11,19 @@ edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
 prognostic_tke: false
 moist: "equil"
-#precip_model: "0M"
 config: "box"
 hyperdiff: "true"
 kappa_4: 1e12
 x_max: 1e5
 y_max: 1e5
-z_max: 4e3
+z_max: 400
 x_elem: 2
 y_elem: 2
-z_elem: 100
+z_elem: 8
 z_stretch: false
+dt: "5secs"
+t_end: "9hours"
+dt_save_to_disk: "10mins"
 perturb_initstate: false
-dt: "1secs"
-t_end: "10800secs"
-dt_save_to_disk: "10secs"
-toml: [toml/edmfx_box.toml]
+FLOAT_TYPE: "Float64"
+toml: [toml/advective_edmfx_box.toml]
