--- a/config/model_configs/advective_edmfx_rico_box.yml
+++ b/config/model_configs/advective_edmfx_rico_box.yml
@@ -1,10 +1,9 @@
-job_id: "edmfx_bomex_box"
-initial_condition: "Bomex"
-subsidence: "Bomex"
-edmf_coriolis: "Bomex"
-ls_adv: "Bomex"
-surface_setup: "Bomex"
-turbconv: "edmfx"
+job_id: "advective_edmfx_rico_box"
+initial_condition: "Rico"
+subsidence: "Rico"
+ls_adv: "Rico"
+surface_setup: "Rico"
+turbconv: "advective_edmfx"
 edmfx_upwinding: first_order
 edmfx_entr_model: "ConstantCoefficient"
 edmfx_detr_model: "BOverW"
@@ -13,18 +12,19 @@ edmfx_sgs_diffusive_flux: true
 edmfx_nh_pressure: true
 prognostic_tke: false
 moist: "equil"
+precip_model: "0M"
 config: "box"
 hyperdiff: "true"
-kappa_4: 1.0e12
+kappa_4: 1e12
 x_max: 1e5
 y_max: 1e5
-z_max: 3e3
+z_max: 4e3
 x_elem: 2
 y_elem: 2
-z_elem: 60
+z_elem: 100
 z_stretch: false
 perturb_initstate: false
-dt: "2secs"
-t_end: "3hours"
-dt_save_to_disk: "10secs"
-toml: [toml/edmfx_box.toml]
+dt: "5secs"
+t_end: "6hours"
+dt_save_to_disk: "10mins"
+toml: [toml/advective_edmfx_box.toml]
