--- a/config/perf_configs/flame_perf_target_edmfx.yml
+++ b/config/perf_configs/flame_perf_target_edmfx.yml
@@ -3,7 +3,7 @@ reference_job_id: "sphere_baroclinic_wave_rhoe_equilmoist"
 ode_algo: "SSP33ShuOsher"
 initial_condition: "MoistBaroclinicWaveWithEDMF"
 edmfx_entr_model: "ConstantCoefficient"
-edmfx_detr_model: "ConstantCoefficient"
+edmfx_detr_model: "BOverW"
 edmfx_sgs_flux: true
 turbconv: "edmfx"
 job_id: "flame_perf_target_edmfx"
