Try aquaplanet DYAMOND simulation on GPU

--- a/.buildkite/gpu_pipeline/pipeline.yml
+++ b/.buildkite/gpu_pipeline/pipeline.yml
@@ -56,6 +56,18 @@ steps:
           slurm_gpus: 1
           slurm_time: 23:00:00
 
+      - label: "gpu_aquaplanet_dyamond"
+        command:
+          - mkdir -p gpu_aquaplanet_dyamond
+          - > 
+            nsys profile --trace=nvtx,cuda --output=gpu_aquaplanet_dyamond/report
+            julia --color=yes --project=examples examples/hybrid/driver.jl
+            --config_file ${GPU_CONFIG_PATH}gpu_aquaplanet_dyamond.yml
+        artifact_paths: "gpu_aquaplanet_dyamond/*"
+        agents:
+          slurm_gpus: 1
+          slurm_time: 23:00:00
+
       - label: "moist Held-Suarez"
         key: "gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km"
         command: 
