--- a/config/model_configs/sphere_held_suarez_rhoe_equilmoist_1.yml
+++ b/config/model_configs/sphere_held_suarez_rhoe_equilmoist_1.yml
@@ -33,4 +33,4 @@ diagnostics:
 #
 job_id: sphere_held_suarez_rhoe_equilmoist_1
 output_dir: sphere_held_suarez_rhoe_equilmoist_1
-toml: toml/sphere_held_suarez_rhoe_equilmoist_1.toml
+toml: [toml/sphere_held_suarez_rhoe_equilmoist_1.toml]
