--- a/config/model_configs/sphere_held_suarez_rhoe_equilmoist_3.yml
+++ b/config/model_configs/sphere_held_suarez_rhoe_equilmoist_3.yml
@@ -33,4 +33,4 @@ diagnostics:
 #
 job_id: sphere_held_suarez_rhoe_equilmoist_3
 output_dir: sphere_held_suarez_rhoe_equilmoist_3
-toml: toml/sphere_held_suarez_rhoe_equilmoist_3.toml
+toml: [toml/sphere_held_suarez_rhoe_equilmoist_3.toml]
