--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -74,7 +74,7 @@ ClimaCoreTempestRemap = "0.3"
 ClimaCoreVTK = "0.7"
 ForwardDiff = "0.10"
 Glob = "1"
-JET = "0.7"
+JET = "0.7, 0.8"
 JSON = "0.21"
 NCRegressionTests = "0.2"
 OrderedCollections = "1"
