--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -83,7 +83,7 @@ ClimaCoreVTK = "0.7"
 DiffEqNoiseProcess = "5"
 ForwardDiff = "0.10"
 Glob = "1"
-JET = "0.7"
+JET = "0.7, 0.8"
 JSON = "0.21"
 OrderedCollections = "1"
 PProf = "2"
