--- a/Project.toml
+++ b/Project.toml
@@ -65,7 +65,7 @@ DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
-FastGaussQuadrature = "0.4, 0.5"
+FastGaussQuadrature = "0.4, 0.5, 1"
 ImageFiltering = "0.7"
 Insolation = "0.6"
 Interpolations = "0.14"
@@ -73,7 +73,7 @@ IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 Krylov = "0.9"
 LambertW = "0.4"
-NCDatasets = "0.11, 0.12"
+NCDatasets = "0.11, 0.12, 0.13"
 NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
 Pkg = "1.8"
