--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -414,6 +414,7 @@ steps:
         agents:
           slurm_mem: 20GB
           slurm_ntasks: 32
+          slurm_time: 24:00:00
 
       - label: ":computer: held suarez (ρe) equilmoist dt_y = 0"
         command: >
@@ -427,10 +428,11 @@ steps:
         agents:
           slurm_mem: 20GB
           slurm_ntasks: 32
+          slurm_time: 24:00:00
 
       - label: ":computer: held suarez (ρe) equilmoist dt_y = 32.5"
         command: >
-          julia --color=yes --project=examples examples/hybrid/driver.jl
+          srun julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_2.yml
 
           julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
@@ -440,10 +442,11 @@ steps:
         agents:
           slurm_mem: 20GB
           slurm_ntasks: 32
+          slurm_time: 24:00:00
 
       - label: ":computer: held suarez (ρe) equilmoist dt_y = 100"
         command: >
-          julia --color=yes --project=examples examples/hybrid/driver.jl
+          srun julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_3.yml
 
           julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
@@ -453,10 +456,11 @@ steps:
         agents:
           slurm_mem: 20GB
           slurm_ntasks: 32
+          slurm_time: 24:00:00
       - label: ":computer: held suarez (ρe) equilmoist dt_y = 150"
 
         command: >
-          julia --color=yes --project=examples examples/hybrid/driver.jl
+          srun julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_4.yml
 
           julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
@@ -466,10 +470,11 @@ steps:
         agents:
           slurm_mem: 20GB
           slurm_ntasks: 32
+          slurm_time: 24:00:00
 
       - label: ":computer: held suarez (ρe) equilmoist dt_y = 200"
         command: >
-          julia --color=yes --project=examples examples/hybrid/driver.jl
+          srun julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_5.yml
 
           julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
@@ -479,10 +484,11 @@ steps:
         agents:
           slurm_mem: 20GB
           slurm_ntasks: 32
+          slurm_time: 24:00:00
 
       - label: ":computer: held suarez (ρe) equilmoist dt_y = 500"
         command: >
-          julia --color=yes --project=examples examples/hybrid/driver.jl
+          srun julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_6.yml
 
           julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
@@ -492,6 +498,7 @@ steps:
         agents:
           slurm_mem: 20GB
           slurm_ntasks: 32
+          slurm_time: 24:00:00
       # - label: ":computer: Diagnostic DCMIP200 surface elevation spectra"
       #   command: >
       #     julia --color=yes --project=examples examples/hybrid/driver.jl
