--- a/config/model_configs/edmfx_dycoms_rf01_box.yml
+++ b/config/model_configs/edmfx_dycoms_rf01_box.yml
@@ -10,7 +10,7 @@ edmfx_entr_model: "ConstantCoefficient"
 edmfx_detr_model: "ConstantCoefficient"
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
-edmfx_nh_pressure: false
+edmfx_nh_pressure: true
 prognostic_tke: false
 moist: equil
 config: box
@@ -23,7 +23,7 @@ x_elem: 2
 y_elem: 2
 z_elem: 30
 z_stretch: false
-dt: 1secs
-t_end: 2400secs
-dt_save_to_disk: 2secs
+dt: 2secs
+t_end: 4hours
+dt_save_to_disk: 10secs
 toml: [toml/edmfx_box.toml]
