--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,6 @@
 agents:
   queue: central
-  slurm_mem: 8G
+  slurm_mem_per_cpu: 4G
   modules: julia/1.9.3 cuda/12.2 ucx/1.14.1_cuda-12.2 openmpi/4.1.5_cuda-12.2 hdf5/1.12.2-ompi415 nsight-systems/2023.2.1
 
 env:
@@ -412,7 +412,6 @@ steps:
           --out_dir sphere_held_suarez_rhoe_equilmoist_default
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_default/*"
         agents:
-          slurm_mem_per_cpu: 8GB
           slurm_ntasks: 32
           slurm_time: 24:00:00
 
@@ -426,7 +425,6 @@ steps:
           --out_dir sphere_held_suarez_rhoe_equilmoist_1
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_1/*"
         agents:
-          slurm_mem_per_cpu: 8GB
           slurm_ntasks: 32
           slurm_time: 24:00:00
 
@@ -440,7 +438,6 @@ steps:
           --out_dir sphere_held_suarez_rhoe_equilmoist_2
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_2/*"
         agents:
-          slurm_mem_per_cpu: 8GB
           slurm_ntasks: 32
           slurm_time: 24:00:00
 
@@ -454,7 +451,6 @@ steps:
           --out_dir sphere_held_suarez_rhoe_equilmoist_3
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_3/*"
         agents:
-          slurm_mem_per_cpu: 8GB
           slurm_ntasks: 32
           slurm_time: 24:00:00
       - label: ":computer: held suarez (ρe) equilmoist dt_y = 150"
@@ -468,7 +464,6 @@ steps:
           --out_dir sphere_held_suarez_rhoe_equilmoist_4
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_4/*"
         agents:
-          slurm_mem_per_cpu: 8GB
           slurm_ntasks: 32
           slurm_time: 24:00:00
 
@@ -482,7 +477,6 @@ steps:
           --out_dir sphere_held_suarez_rhoe_equilmoist_5
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_5/*"
         agents:
-          slurm_mem_per_cpu: 8GB
           slurm_ntasks: 32
           slurm_time: 24:00:00
 
@@ -496,7 +490,6 @@ steps:
           --out_dir sphere_held_suarez_rhoe_equilmoist_6
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_6/*"
         agents:
-          slurm_mem_per_cpu: 8GB
           slurm_ntasks: 32
           slurm_time: 24:00:00
       # - label: ":computer: Diagnostic DCMIP200 surface elevation spectra"
