--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -912,6 +912,35 @@ steps:
           - "sphere_held_suarez_rhoe_hightop"
           - "gpu_held_suarez_rhoe_hightop"
 
+      - label: "GPU: GPU dry baroclinic wave"
+        key: "target_gpu_implicit_baroclinic_wave"
+        command:
+          - mkdir -p target_gpu_implicit_baroclinic_wave
+          - >
+            nsys profile --trace=nvtx,cuda --output=target_gpu_implicit_baroclinic_wave/report
+            julia --color=yes --project=examples examples/hybrid/driver.jl
+            --config_file ${GPU_CONFIG_PATH}target_gpu_implicit_baroclinic_wave.yml
+        artifact_paths: "target_gpu_implicit_baroclinic_wave/*"
+        agents:
+          slurm_gpus: 1
+
+      - label: "GPU: GPU dry baroclinic wave - 4 gpus"
+        key: "target_gpu_implicit_baroclinic_wave_4process"
+        command:
+          - mkdir -p target_gpu_implicit_baroclinic_wave_4process
+          - >
+            srun
+            nsys profile --trace=nvtx,cuda,mpi --output=target_gpu_implicit_baroclinic_wave_4process/report-%q{PMI_RANK}
+            julia --color=yes --project=examples examples/hybrid/driver.jl
+            --config_file ${GPU_CONFIG_PATH}target_gpu_implicit_baroclinic_wave_4process.yml
+        artifact_paths: "target_gpu_implicit_baroclinic_wave_4process/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_gpus_per_task: 1
+          slurm_ntasks: 4
+          slurm_mem: 16G
+
       - label: "GPU: GPU moist Held-Suarez"
         command: >
           julia --project -e 'using CUDA; CUDA.versioninfo()'
@@ -919,6 +948,18 @@ steps:
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $GPU_CONFIG_PATH/central_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.yml
         artifact_paths: "central_gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km/*"
+        agents:
+          slurm_gpus: 1
+        soft_fail: true
+
+      - label: "GPU: gpu_aquaplanet_dyamond"
+        command:
+          - mkdir -p gpu_aquaplanet_dyamond
+          - > 
+            nsys profile --trace=nvtx,cuda --output=gpu_aquaplanet_dyamond/report
+            julia --color=yes --project=examples examples/hybrid/driver.jl
+            --config_file ${GPU_CONFIG_PATH}gpu_aquaplanet_dyamond.yml
+        artifact_paths: "gpu_aquaplanet_dyamond/*"
         agents:
           slurm_gpus: 1
         soft_fail: true
