--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -67,7 +67,7 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 [compat]
 BlockArrays = "0.16"
 CairoMakie = "0.10"
-ClimaCoreMakie = "0.3"
+ClimaCoreMakie = "0.3, 0.4"
 ClimaCorePlots = "0.2"
 ClimaCoreSpectra = "0.1"
 ClimaCoreTempestRemap = "0.3"
