--- a/.buildkite/gpu_pipeline/pipeline.yml
+++ b/.buildkite/gpu_pipeline/pipeline.yml
@@ -1,7 +1,7 @@
 agents:
   queue: clima
-  slurm_mem: 8G
-  modules: julia/1.9.3 cuda/julia-pref openmpi/4.1.5
+  slurm_mem_per_cpu: 16G
+  modules: julia/1.9.3 cuda/julia-pref openmpi/4.1.5 nsight-systems/2023.3.1
 
 env:
   OPENBLAS_NUM_THREADS: 1
@@ -30,6 +30,7 @@ steps:
       
     agents:
       slurm_gpus: 1
+      slurm_cpus_per_task: 8
     env:
       JULIA_NUM_PRECOMPILE_TASKS: 8
       JULIA_MAX_NUM_PRECOMPILE_FILES: 50
@@ -74,22 +75,19 @@ steps:
             --config_file ${GPU_CONFIG_PATH}gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.yml
         artifact_paths: "gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km/*"
         agents:
-<<<<<<< HEAD
           slurm_gpus: 1
-=======
-          slurm_gpus: 4
->>>>>>> cd280427 (deterministically call GC)
 
       - label: "dry baroclinic wave - 4 gpus"
         key: "target_gpu_implicit_baroclinic_wave_4process"
         command:
           - mkdir -p target_gpu_implicit_baroclinic_wave_4process
           - >
-            srun
+            srun --cpu-bind=cores
             nsys profile --trace=nvtx,cuda,mpi --output=target_gpu_implicit_baroclinic_wave_4process/report-%q{PMI_RANK}
             julia --color=yes --project=examples examples/hybrid/driver.jl
             --config_file ${GPU_CONFIG_PATH}target_gpu_implicit_baroclinic_wave_4process.yml
         artifact_paths: "target_gpu_implicit_baroclinic_wave_4process/*"
         agents:
           slurm_gpus_per_task: 1
+          slurm_cpus_per_task: 2
           slurm_ntasks: 4
