--- a/config/model_configs/sphere_held_suarez_rhoe_equilmoist_default.yml
+++ b/config/model_configs/sphere_held_suarez_rhoe_equilmoist_default.yml
@@ -1,7 +1,7 @@
 dt: 200secs 
 t_end: 200days 
 ode_algo: ARS343
-dt_save_to_disk: 6hours 
+dt_save_to_disk: Inf 
 moist: equil
 forcing: held_suarez 
 precip_model: 0M 
